Fix Java 11 compilation errors: replace Stream.toList() and add missing import
Replace Stream.toList() (Java 16+) with collect(Collectors.toList()) in
ESContentletAPIImpl and TreeFactory; add missing DotSecurityException import
in VersionableFactoryImpl.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>